# rules_rust

examples/bzlmod/proto/: Cargo.toml  MODULE.bazel
examples/bzlmod/proto/grpc_client/: Cargo.toml
examples/bzlmod/proto/grpc_client/src/: main.rs
examples/bzlmod/proto/proto_bindings/: BUILD.bazel  Cargo.toml  build.rs
examples/bzlmod/proto/proto_bindings/proto/: helloworld.proto
proto/prost/private/: protoc_wrapper.rs
