[package]
name = "proto_bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true



[lib]
name = "proto_bindings"
path = "src/lib.rs"


[dependencies]
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
